--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,85 +1,84 @@
-body{
-	margin:0px,
-	padding:0px;
-
+body {
+	margin: 0px, padding:0px;
 }
 
-.box{
-
-	width:310px;
-	display:inline-block;
+.box {
+	width: 310px;
+	display: inline-block;
 }
 
-.outer-box{
-	background-color:orange;
+.outer-box {
+	background-color: orange;
 	display: table;
-	margin:0 auto;
-		padding:30px;
+	margin: 0 auto;
+	padding: 30px;
 }
 
-#letter-containers{
-
-
-}
-
-.correct-answers{
-	margin:0px;
-	padding:0px;
-}
-
-.correct-answers > li{
-	background-color:orange;
-	margin-bottom:3px;
-	list-style-type:none;
-	font-size:1.5em;
-}
-#answer-submit-button {
-    margin-top: 20px;
-    float: right;
-}
-.letter-column{
-	width:19.9%;
+#letter-containers {
+	width:83%;
+	margin:auto;
 	height:300px;
-	border-style:solid;
 
+}
+
+.correct-answers {
+	margin: 0px;
+	padding: 0px;
+}
+
+.correct-answers > li {
+	background-color: orange;
+	margin-bottom: 3px;
+	list-style-type: none;
+	font-size: 1.5em;
+}
+
+#answer-submit-button {
+	margin-right:22%;
+	margin-top: 20px;
+	float: right;
+}
+
+.letter-column {
+	width: 19.9%;
+	height: 300px;
+	border-style: solid;
 	float: left;
-	background-color:rgba(255, 179, 0, 0.64);
-
-
-}
-
-ul{
-	margin:0;
-	padding:0;
-
-
-}
-
-.letter{
-	list-style:none;
-	text-align:center;
-	font-size:32px;
-		width:100%;
-	height:50px;
 	
-	outline-style:solid;
-	background-color:#fce7d0;
+}
 
+ul {
+	margin: 0;
+	padding: 0;
+}
+
+.letter {
+	list-style: none;
+	text-align: center;
+	font-size: 32px;
+	width: 100%;
+	height: 50px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+
+
+color:black;
+background-color: hsla(231, 48%, 48%, 0.34);
 }
 
 .letter:nth-child(3) {
-
+	background-color: rgba(255, 235, 59, 0.51);
 }
 
-#answers{
-	background-color:red;
-		width:620px;
-		margin:0 auto;
-			padding:60px;
+#answers {
+	background-color: red;
+	width: 620px;
+	margin: 0 auto;
+	padding: 60px;
 }
 
-#answers > span{
-	display:inline-block;
-	outline-style:solid;
-	float:left;
+#answers > span {
+	display: inline-block;
+	outline-style: solid;
+	float: left;
 }
