--- a/app/css/app.css
+++ b/app/css/app.css
@@ -7,6 +7,7 @@ body {
 	display: inline-block;
 }
 
+
 .outer-box {
 	background-color: orange;
 	display: table;
@@ -26,12 +27,18 @@ body {
 	font-size: 0.7em;
 }
 
+.current-medal-text{
+	position:relative;
+	right:40px;
+	width:100%;
+}
+
 .total-points-box{
-	padding-top:16px;
-	padding-left: 15%;
+	padding-top:12px;
+	padding-left: 17%;
     margin: auto;
-    width: 90%;
-    font-size:0.9em;
+    width: 100%;
+    font-size:0.8em;
 
 }
 #letter-containers {
