--- a/css/app.css
+++ b/css/app.css
@@ -60,11 +60,13 @@ p {
   border-radius: 6px;
   margin-bottom: 1em;
 }
+
 code {
   background-color: transparent;
-  display: block;
+  display: inline-block;
   color: rgba(9, 255, 45, 0.14);
-  font-size: 2em;
+     font-size: 0.5em;
+    font-size: 2vw;
 }
 .code {
   position: absolute;
